# esame_c-

./: CMakeLists.txt  README.md  main.cpp
data/: dati.txt
lib/: CMakeLists.txt  contocorrente.cpp  contocorrente.h  transazione.cpp  transazione.h
test/: CMakeLists.txt  test_contocorrente.cpp
